# Universal_Robots_ROS2_Driver

ur_bringup/config/: test_goal_publishers_config.yaml
ur_bringup/launch/: ur_control.launch.py
ur_move_group_interface/: CMakeLists.txt  package.xml
ur_move_group_interface/launch/: ur_move_group.launch.py  ur_move_group_interface.launch.py
ur_move_group_interface/src/: ur_move_group_interface.cpp
ur_moveit_config/rviz/: view_robot.rviz
